--------------------------------------------------------------------------------
Simon Wenner:
 * Paranoia: modular key management (first step)
 * Paranoia: key list uses move-to-front transform
 * Paranoia: A pop-up at the end and status messages while generating new keys
 * Paranoia: '/otp reload' command added to regenerate the key list
 * Pranopia: key generator live status feedback

Christian Wäckerlin:
 * libotp: Added CRC32 test to ensure that the messages are unmodified.
  - This breaks compatibility with versions smaller than 0.2!
  - Compatible with version 0.2, libotp aknowledges that 0.2 has no CRC32 and 
    does not complain that the message has changed.

Pascal Sachs:
 * Keygen: Changed I/O System from clib to GIO
 * Keygen: Better performance and less CPU usage on key generation
 * Keygen: Security Improvement through new entropy pool system
 * Keygen: Entropy source check moved from libotp to keygen
 * Keygen: Added ability to generate multiple keys simultaneous
 * Keygen: Code cleanup and minor bug fixes

Version 0.2.0
--------------------------------------------------------------------------------
Simon Wenner:
 * Check libpurple and glib minor version number in configure
 * Cleaned and enhanced the make system
 * Paranoia: Support for multiple key files per conversation
 * Paranoia: Use the new libotp api (set/get and config)
 * Paranoia: Key settings are resetted if a buddy goes offline
 * Paranoia: '/otp list' and '/otp list-all' added to list available keys
 * Paranoia: no more request messages for offline buddies
 * Paranoia: add generated key to the key list

Christian Wäckerlin:
 * Libotp: System of error syndromes (OtpError) implemented
 * Libotp: otp_encrypt, otp_decrypt, otp_encrypt_warning are now transactional
 * Libotp: getter/setter system, struct otp is now private
 * Libotp: otp_conf system implemented, libotp is multi-application aware
 * Libotp keeps filehandles and mmap open to save CPU cycles.